2001-12-17  Xavier Ordoquy  <mcarkan@users.sourceforge.net>

	* moduleinfo.py: added zvt dependance to gnome-core.

2001-12-09  James Henstridge  <james@daa.com.au>

	* bootstrap.py: fix up bug for patch apply code found by Josh Lucas
	<josh@stonecottage.com>

2001-12-05  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Add dependency on gnome-common
	for librsvg, libzvt for gnome-core. Add gnome-utils.

2001-12-04  James Henstridge  <james@daa.com.au>

	* README: more documentation updates.

	* gettext-changelog.patch: a patch to make gettextize not suck.

	* bootstrap.py (build_bootstraps): code to handle building
	required tools, such as autoconf, etc.

	* module.py (BuildScript.__init__): get rid of code setting up the
	environment from here.

	* jhbuild.py (addpath): move code that sets up the environment to
	this file.

	* README: update readme to reflect changed command line args.

	* jhbuild.py (main): rearrange the argument parsing a bit.

Mon Dec  3 23:31:43 2001  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py: Added a whole bunch more GNOME-2.0 modules.

2001-11-30  James Henstridge  <james@daa.com.au>

	* jamesh.jhbuildrc: add --enable-maintainer-mode for packages whose
	autogen scripts don't automatically.

	* moduleinfo.py: fix up dependencies a bit.

2001-11-19  James Henstridge  <james@daa.com.au>

	* module.py (BuildScript.__addpath): prepend the new path element,
	rather than appending it.

2001-10-26  James Henstridge  <james@daa.com.au>

	* module.py (Module.cvs_update_args): add -P -d arguments to cvs
	update commands for people who don't have them hard coded in their
	~/.cvsrc file.

2001-10-25  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome1): add initial (untested) support for
	building the gnome 1.x platform.
