@@ -1,3 +1,11 @@
+2001-12-24  James Henstridge  <james@daa.com.au>
+
+	* bootstrap.py (Bootstrap._bold): same here.
+	(Bootstrap.wants_package): string.find returns -1 on error -- not 0
+
+	* module.py (BuildScript._message): if it is an xterm, also put
+	messages in the window title.
+
 2001-12-17  Xavier Ordoquy  <mcarkan@users.sourceforge.net>
 
 	* moduleinfo.py: added zvt dependance to gnome-core.
